--- a/mytomcatrole/template/tomuser.j2
+++ b/mytomcatrole/template/tomuser.j2
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   Licensed to the Apache Software Foundation (ASF) under one or more
@@ -25,7 +24,8 @@
   to operate the "/manager/html" web application.  If you wish to use this app,
   you must define such a user - the username and password are arbitrary. It is
   strongly recommended that you do NOT use one of the users in the commented out
-  section below since they are intended for use with the examples web  application.
+  section below since they are intended for use with the examples web
+  application.
 -->
 <!--
   NOTE:  The sample user and role entries below are intended for use with the
@@ -39,11 +39,7 @@
   <role rolename="role1"/>
   <user username="tomcat" password="<must-be-changed>" roles="tomcat"/>
   <user username="both" password="<must-be-changed>" roles="tomcat,role1"/>
-  -->
-
-
- <user username="nitin" password="nitin" roles="manager-gui,admin-gui"/>
+  <user username="role1" password="<must-be-changed>" roles="role1"/>
+-->
+ <user username="vertex" password="vertex" roles="manager-gui,admin-gui"/>
 </tomcat-users>
-
-
-
