--- a/mytomcatrole/template/context.j2
+++ b/mytomcatrole/template/context.j2
@@ -1,4 +1,3 @@
-
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   Licensed to the Apache Software Foundation (ASF) under one or more
@@ -18,6 +17,6 @@
 -->
 <Context antiResourceLocking="false" privileged="true" >
 <!--  <Valve className="org.apache.catalina.valves.RemoteAddrValve"
-         allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" />-->
-  <Manager sessionAttributeValueClassNameFilter="java\.lang\.(?:Boolean|Integer$
-</Context>
+         allow="127\.\d+\.\d+\.\d+|::1|0:0:0:0:0:0:0:1" />
+  <Manager sessionAttributeValueClassNameFilter="java\.lang\.(?:Boolean|Integer|Long|Number|String)|org\.apache\.catalina$
+--></Context>
